# school_ropro_hw

./: README.md
launch/: node12_launch.py
ropro_hw/ropro_hw/: CMakeLists.txt  package.xml
ropro_hw/ropro_hw/src/: ropro_node1.cpp  ropro_node2.cpp
src/custom_action_interfaces/: CMakeLists.txt  package.xml
src/interface2/: CMakeLists.txt  package.xml
src/node1/: package.xml  setup.cfg  setup.py
src/node1/node1/: action_server.py  service_server.py  topic_publisher.py
src/node2/: package.xml  setup.cfg  setup.py
src/node2/node2/: action_client.py  mnode2.py  service_client.py  topic_subscriber.py
